<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Collatz Conjecture Path Cruncher</string>
    <string name="explanation">The Collatz Conjecture states: \'start with any positive integer n.
        Then each term is obtained from the previous term as follows: if the previous term is even,
        the next term is one half the previous term. Otherwise, the next term is 3 times the
        previous term plus 1. The conjecture is that no matter what value of n, the sequence will
        always reach 1.\'</string>
    <string name="starting_number_label">Starting Number:</string>
    <string name="starting_number_hint">Enter Number Here.</string>
    <string name="longest_path_display">Longest Path Found: <xliff:g id="path_length" example="0">%d</xliff:g></string>
    <string name="longest_path_seed_display">Longest Path Generated by: <xliff:g id="long_seed" example="1">%d</xliff:g></string>
    <string name="current_seed_display">Current Seed: <xliff:g id="current_seed" example="2">%d</xliff:g></string>
    <string name="start_button_text">Start Crunching!</string>
    <string name="stop_button_text">Stop Crunching!</string>
</resources>