<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/screenMargin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/explanation"
            android:textSize="@dimen/mediumTextSize"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/viewBarHeight"
            android:background="@android:color/black"
            android:layout_margin="@dimen/viewBarMargin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/textViewMargin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/mediumTextSize"
                android:textColor="@android:color/black"
                android:text="@string/starting_number_label"/>

            <EditText
                android:id="@+id/starting_number_display"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/mediumTextSize"
                android:hint="@string/starting_number_hint"
                android:inputType="number"/>

        </LinearLayout>

        <TextView
            android:id="@+id/longest_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longest_path_display"
            android:textColor="@android:color/black"
            android:textSize="@dimen/mediumTextSize"
            android:layout_margin="@dimen/textViewMargin"/>

        <TextView
            android:id="@+id/longest_path_seed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longest_path_seed_display"
            android:textColor="@android:color/black"
            android:textSize="@dimen/mediumTextSize"
            android:layout_margin="@dimen/textViewMargin"/>

        <TextView
            android:id="@+id/current_seed_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_seed_display"
            android:textColor="@android:color/black"
            android:textSize="@dimen/mediumTextSize"
            android:layout_margin="@dimen/textViewMargin"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_button_text"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/buttonTopMargin"
                android:onClick="startCrunchingRequest"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop_button_text"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/buttonTopMargin"
                android:onClick="stopCrunchingRequest"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>